Personnalisation de la page d'accueil du site - 1

--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -19,10 +19,25 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">A Propos</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Saar Côte d'Ivoire </a>
+                            <h4 class="mb-4 text-white">Nos produits</h4>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Automobile</a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Voyage </a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Santé </a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Individuelle Accident </a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Habitation</a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Transport </a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Caution </a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Risques Divers </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-8 col-lg-8 col-xl-4">
+                        <div class="footer-item d-flex flex-column">
+                            <h4 class="mb-4 text-white">Saar Côte d'Ivoire</h4>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> A propos de nous </a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Direction Générale</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Nos Valeurs </a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Nos Agences</a>
@@ -30,18 +45,7 @@
                             {% comment %} <a href=""><i class="fas fa-angle-right me-2"></i> Magazine</a> {% endcomment %}
                         </div>
                     </div>
-                    <div class="col-md-8 col-lg-8 col-xl-4">
-                        <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Nos produits</h4>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Automobile</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Voyage </a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Santé </a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Accidents Corporels </a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Habitation</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Incendie </a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Risques Divers </a>
-                        </div>
-                    </div>
+                   
                     {% comment %} <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                             <div class="row gy-3 gx-2 mb-4">
