--- a/src/saar_website/templates/saar_website/partials/header.html
+++ b/src/saar_website/templates/saar_website/partials/header.html
@@ -55,11 +55,12 @@
                             <div class="dropdown-menu m-0">
                                 <a href="destination.html" class="dropdown-item">Santé</a>
                                 <a href="tour.html" class="dropdown-item">Voyage</a>
-                                <a href="booking.html" class="dropdown-item">Accidents Corporels</a>
+                                <a href="booking.html" class="dropdown-item">Individuelle Accident</a>
                             </div>
                         </div>
                         <a href="services.html" class="nav-item nav-link">Habitation</a>
-                        <a href="packages.html" class="nav-item nav-link">Incendie</a>
+                        <a href="packages.html" class="nav-item nav-link">Transport</a>
+                        <a href="packages.html" class="nav-item nav-link">Caution</a>
                         <a href="blog.html" class="nav-item nav-link">Risques Divers</a>
                         {% comment %} <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -91,43 +92,46 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img src="{% static 'img/carousel-2.jpg' %}" class="img-fluid" alt="Image">
+                            {% comment %} <img src="{% static 'img/carousel-2.jpg' %}" class="img-fluid" alt="Image"> {% endcomment %}
+                            <img src="{% static 'img/essai2.jpg' %}" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
-                                    <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4>
-                                    <h1 class="display-2 text-capitalize text-white mb-4">Let's The World Together!</h1>
-                                    <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    </p>
+                                     {% comment %} <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4> {% endcomment %}
+                                    <h1 class="display-2 text-capitalize text-primary mb-4">ASSURANCE AUTO</h1>
+                                    <p class="mb-5 fs-5">Votre sécurité est notre priorité absolue sur la route. Avec notre assurance automobile, vous bénéficiez d'une protection fiable et d'un service attentionné à chaque étape, 
+                                    </p> 
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Discover Now</a>
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">En savoir plus</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static 'img/carousel-1.jpg' %}" class="img-fluid" alt="Image">
+                            {% comment %} <img src="{% static 'img/carousel-1.jpg' %}" class="img-fluid" alt="Image"> {% endcomment %}
+                            <img src="{% static 'img/joker_bailleur_cp.jpg' %}" class="img-fluid" alt="Image">
+
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
-                                    <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4>
+                                    {% comment %} <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4>
                                     <h1 class="display-2 text-capitalize text-white mb-4">Find Your Perfect Tour At Travel</h1>
                                     <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    </p>
+                                    </p>  {% endcomment %}
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Discover Now</a>
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">En savoir plus</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static 'img/carousel-3.jpg' %}" class="img-fluid" alt="Image">
+                            <img src="{% static 'img/saar_takaful_cp2.jpg' %}" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
-                                    <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Explore The World</h4>
-                                    <h1 class="display-2 text-capitalize text-white mb-4">You Like To Go?</h1>
-                                    <p class="mb-5 fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                                    {% comment %} <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">SAAR TAKAFUL</h4> {% endcomment %}
+                                    <h1 class="display-2 text-capitalize text-primary mb-4">SAAR TAKAFUL</h1>
+                                    <p class="mb-5 fs-5">Protégez votre avenir avec SAAR TAKAFUL, une assurance conforme aux principes islamiques,
                                     </p>
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">Discover Now</a>
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="#">En savoir plus</a>
                                     </div>
                                 </div>
                             </div>
