--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -26,7 +26,7 @@
                             <a href=""><i class="fas fa-angle-right me-2"></i> Automobile</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Voyage </a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Santé </a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i> Individuelle Accident </a>
+                            <a href=""><i class="fas fa-angle-right me-2"></i> Individuelle Accidents </a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Habitation</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Transport </a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Caution </a>
