--- a/src/saar_website/templates/saar_website/partials/header.html
+++ b/src/saar_website/templates/saar_website/partials/header.html
@@ -55,7 +55,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="destination.html" class="dropdown-item">Santé</a>
                                 <a href="tour.html" class="dropdown-item">Voyage</a>
-                                <a href="booking.html" class="dropdown-item">Individuelle Accident</a>
+                                <a href="booking.html" class="dropdown-item">Individuelle Accidents</a>
                             </div>
                         </div>
                         <a href="services.html" class="nav-item nav-link">Habitation</a>
