--- a/src/saar_website/static/css/style.css
+++ b/src/saar_website/static/css/style.css
@@ -399,7 +399,7 @@
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
-    background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/breadcrumb-bg.jpg);
+    background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/assurance_auto.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
