Personnalisation page d'accueil 4 (suite) : Carousels variables

--- a/src/saar_website/templates/saar_website/404.html
+++ b/src/saar_website/templates/saar_website/404.html
@@ -26,7 +26,7 @@
                 <h1 class="display-1">404</h1>
                 <h1 class="mb-4 text-dark">Page non trouvée</h1>
                 <p class="mb-4 text-dark">Nous sommes désolés, la page que vous recherchez n'existe pas sur notre site web ! Peut-être devriez-vous vous rendre sur notre page d'accueil ou essayer d'effectuer une recherche ?</p>
-                <a class="btn btn-primary rounded-pill py-3 px-5" href="{% url 'index' %}">Go Back To Home</a>
+                <a class="btn btn-primary rounded-pill py-3 px-5" href="{% url 'index' %}">Retour à la page d'accueil</a>
             </div>
         </div>
     </div>
