--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -379,7 +379,7 @@
             <div class="testimonial-carousel owl-carousel">
                 <div class="testimonial-item text-center rounded pb-4">
                     <div class="testimonial-comment bg-light rounded p-4">
-                        <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro officiis. Vero reiciendis,
+                        <p class="text-center mb-5">La meilleure depuis des années, je suis en partenariat avec eux, ils sont aussi à Abidjan sud Bietry en face de l'église catholique Notre Dame d'Afrique
                         </p>
                     </div>
                     <div class="testimonial-img p-1">
@@ -387,8 +387,8 @@
                         <i class="fa fa-user-circle" style="font-size: 90px;"></i>
                     </div>
                     <div style="margin-top: -35px;">
-                        <h5 class="mb-0">John Abraham</h5>
-                        <p class="mb-0">New York, USA</p>
+                        <h5 class="mb-0">Christ Alim</h5>
+                        <p class="mb-0">Abidjan, Côte d'Ivoire</p>
                         {% comment %} <div class="d-flex justify-content-center">
                             <i class="fas fa-star text-primary"></i>
                             <i class="fas fa-star text-primary"></i>
@@ -400,7 +400,7 @@
                 </div>
                 <div class="testimonial-item text-center rounded pb-4">
                     <div class="testimonial-comment bg-light rounded p-4">
-                        <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro officiis. Vero reiciendis,
+                        <p class="text-center mb-5">Je viens de prendre mon assurance à l’instant très rapide et fiable
                         </p>
                     </div>
                     <div class="testimonial-img p-1">
@@ -408,8 +408,8 @@
                         <i class="fa fa-user-circle" style="font-size: 90px;"></i>
                     </div>
                     <div style="margin-top: -35px;">
-                        <h5 class="mb-0">John Abraham</h5>
-                        <p class="mb-0">New York, USA</p>
+                        <h5 class="mb-0">Igor Passport</h5>
+                        <p class="mb-0">Abidjan, Côte d'Ivoire</p>
                         {% comment %} <div class="d-flex justify-content-center">
                             <i class="fas fa-star text-primary"></i>
                             <i class="fas fa-star text-primary"></i>
@@ -421,7 +421,7 @@
                 </div>
                 <div class="testimonial-item text-center rounded pb-4">
                     <div class="testimonial-comment bg-light rounded p-4">
-                        <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro officiis. Vero reiciendis,
+                        <p class="text-center mb-5">Wahou quelle innovation pour joker bailleur, vous êtes les meilleurs
                         </p>
                     </div>
                     <div class="testimonial-img p-1">
@@ -429,8 +429,8 @@
                         <i class="fa fa-user-circle" style="font-size: 90px;"></i>
                     </div>
                     <div style="margin-top: -35px;">
-                        <h5 class="mb-0">John Abraham</h5>
-                        <p class="mb-0">New York, USA</p>
+                        <h5 class="mb-0">Sidiki Guikas Kouyate</h5>
+                        <p class="mb-0">Abidjan, Côte d'Ivoire</p>
                         {% comment %} <div class="d-flex justify-content-center">
                             <i class="fas fa-star text-primary"></i>
                             <i class="fas fa-star text-primary"></i>
@@ -442,7 +442,7 @@
                 </div>
                 <div class="testimonial-item text-center rounded pb-4">
                     <div class="testimonial-comment bg-light rounded p-4">
-                        <p class="text-center mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis nostrum cupiditate, eligendi repellendus saepe illum earum architecto dicta quisquam quasi porro officiis. Vero reiciendis,
+                        <p class="text-center mb-5">Je dis un grand merci à Saar Assurance Vie. Car toutes mes préocupations ont été résolu en un temps record. Mille et une fois merci pour votre réception
                         </p>
                     </div>
                     <div class="testimonial-img p-1">
@@ -450,8 +450,8 @@
                         <i class="fa fa-user-circle" style="font-size: 90px;"></i>
                     </div>
                     <div style="margin-top: -35px;">
-                        <h5 class="mb-0">John Abraham</h5>
-                        <p class="mb-0">New York, USA</p>
+                        <h5 class="mb-0">Lea Monet</h5>
+                        <p class="mb-0">Abidjan, Côte d'Ivoire</p>
                         {% comment %} <div class="d-flex justify-content-center">
                             <i class="fas fa-star text-primary"></i>
                             <i class="fas fa-star text-primary"></i>
