--- a/src/saar_website/templates/saar_website/partials/header.html
+++ b/src/saar_website/templates/saar_website/partials/header.html
@@ -49,19 +49,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="{% url 'index' %}" class="nav-item nav-link active">Accueil</a>
-                        <a href="about.html" class="nav-item nav-link">Automobile</a>
+                        <a href="{% url 'produit' numero=products_keys.0 %}" class="nav-item nav-link">Automobile</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Assurance de Personnes</a>
                             <div class="dropdown-menu m-0">
-                                <a href="destination.html" class="dropdown-item">Santé</a>
-                                <a href="tour.html" class="dropdown-item">Voyage</a>
-                                <a href="booking.html" class="dropdown-item">Individuelle Accidents</a>
+                                <a href="{% url 'produit' numero=products_keys.1 %}" class="dropdown-item">Santé</a>
+                                <a href="{% url 'produit' numero=products_keys.2 %}" class="dropdown-item">Individuelle Accidents</a>
+                                <a href="{% url 'produit' numero=products_keys.3 %}" class="dropdown-item">Voyage</a>
                             </div>
                         </div>
-                        <a href="services.html" class="nav-item nav-link">Habitation</a>
-                        <a href="packages.html" class="nav-item nav-link">Transport</a>
-                        <a href="packages.html" class="nav-item nav-link">Caution</a>
-                        <a href="blog.html" class="nav-item nav-link">Risques Divers</a>
+                        <a href="{% url 'produit' numero=products_keys.4 %}" class="nav-item nav-link">Habitation</a>
+                        <a href="{% url 'produit' numero=products_keys.5 %}" class="nav-item nav-link">Transport</a>
+                        <a href="{% url 'produit' numero=products_keys.6 %}" class="nav-item nav-link">Caution</a>
+                        <a href="{% url 'produit' numero=products_keys.7 %}" class="nav-item nav-link">Risques Divers</a>
                         {% comment %} <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
@@ -105,7 +105,7 @@
                                     <h1 class="display-2 text-capitalize text-primary mb-4">{{carousel.titre|default_if_none:""}}</h1>
                                     <p class="mb-5 fs-5">{{carousel.contenu|default_if_none:""}}</p> 
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="{% url 'carousel' numero=forloop.counter %}">En savoir plus</a>
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="{% url 'carousel' numero=carousel.pk %}">En savoir plus</a>
                                         {% comment %} <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="{{carousel.get_absolute_url}}">En savoir plus</a> {% endcomment %}
                                     </div>
                                 </div>
