Ajout des différentes pages : produits, about, agences, ..

--- a/src/saar_website/static/css/style.css
+++ b/src/saar_website/static/css/style.css
@@ -409,6 +409,7 @@
 
 .bg-breadcrumb .breadcrumb-item a {
     color: var(--bs-secondary) !important;
+    /* color: #B99470 !important; */
 }
 /*** Single Page Hero Header End ***/
 
