--- a/src/saar_website/templates/saar_website/contact.html
+++ b/src/saar_website/templates/saar_website/contact.html
@@ -7,10 +7,10 @@
      <!-- Header Start -->
      <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px;">
-            <h3 class="text-white display-3 mb-4">Contact Us</h1>
+            <h3 class="text-white display-3 mb-4">Contactez Nous</h1>
             <ol class="breadcrumb justify-content-center mb-0">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
+                {% comment %} <li class="breadcrumb-item"><a href="#">Pages</a></li> {% endcomment %}
                 <li class="breadcrumb-item active text-white">Contact</li>
             </ol>    
         </div>
@@ -21,8 +21,8 @@
     <div class="container-fluid contact bg-light py-5">
         <div class="container py-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                <h5 class="section-title px-3">Contact Us</h5>
-                <h1 class="mb-0">Contact For Any Query</h1>
+                <h5 class="section-title px-3">Contactez Nous</h5>
+                <h1 class="mb-0">Contact Pour Toutes Préoccupations</h1>
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-4">
@@ -30,26 +30,26 @@
                         <div class="text-center mb-4">
                             <i class="fa fa-map-marker-alt fa-3x text-primary"></i>
                             <h4 class="text-primary"><Address></Address></h4>
-                            <p class="mb-0">123 ranking Street, <br> New York, USA</p>
+                            <p class="mb-0">7eme Tranche, Cocody II Plateaux Aghien, <br>Abidjan, Côte d'Ivoire</p>
                         </div>
                         <div class="text-center mb-4">
                             <i class="fa fa-phone-alt fa-3x text-primary mb-3"></i>
                             <h4 class="text-primary">Mobile</h4>
-                            <p class="mb-0">+012 345 67890</p>
-                            <p class="mb-0">+012 345 67890</p>
+                            <p class="mb-0">+225 27 22 50 81 50</p>
+                            {% comment %} <p class="mb-0">+012 345 67890</p> {% endcomment %}
                         </div>
                        
                         <div class="text-center">
                             <i class="fa fa-envelope-open fa-3x text-primary mb-3"></i>
                             <h4 class="text-primary">Email</h4>
-                            <p class="mb-0">info@example.com</p>
-                            <p class="mb-0">info@example.com</p>
+                            <p class="mb-0">saarci@saar-assurances.com</p>
+                            {% comment %} <p class="mb-0">info@example.com</p> {% endcomment %}
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <h3 class="mb-2">Send us a message</h3>
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <h3 class="mb-2">Envoyer un message</h3>
+                    {% comment %} <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> {% endcomment %}
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
