--- a/src/saar_website/templates/saar_website/partials/header.html
+++ b/src/saar_website/templates/saar_website/partials/header.html
@@ -38,7 +38,7 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="{% url 'index' %}" class="navbar-brand p-0">
                     {% comment %} <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Saar Côte d'Ivoire</h1> {% endcomment %}
                     <h1 class="m-0"> Saar Côte d'Ivoire </h1>
                     {% comment %} <img src="{% static 'img/saar_img.jpg' %}" style="height: 900px; width : 300px;" alt="Logo"> {% endcomment %}
@@ -48,20 +48,41 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="{% url 'index' %}" class="nav-item nav-link active">Accueil</a>
-                        <a href="{% url 'produit' numero=products_keys.0 %}" class="nav-item nav-link">Automobile</a>
+                        <a href="{% url 'index' %}" class="nav-item nav-link 
+                        {% if active_index or active_about or active_agences %}
+                        active
+                        {% endif %} ">Accueil</a>
+                        <a href="{% url 'produit' numero=1 %}" class="nav-item nav-link {% if active_produit1 %}
+                        active
+                        {% endif %}">Automobile</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Assurance de Personnes</a>
+                            <a href="#" class="nav-link dropdown-toggle {% if active_produit2 or active_produit3 or active_produit4 %}
+                            active
+                            {% endif %}" data-bs-toggle="dropdown">Assurance de Personnes</a>
                             <div class="dropdown-menu m-0">
-                                <a href="{% url 'produit' numero=products_keys.1 %}" class="dropdown-item">Santé</a>
-                                <a href="{% url 'produit' numero=products_keys.2 %}" class="dropdown-item">Individuelle Accidents</a>
-                                <a href="{% url 'produit' numero=products_keys.3 %}" class="dropdown-item">Voyage</a>
+                                <a href="{% url 'produit' numero=2 %}" class="dropdown-item {% if active_produit2 %}
+                                active
+                                {% endif %}">Santé</a>
+                                <a href="{% url 'produit' numero=3 %}" class="dropdown-item {% if active_produit3 %}
+                                active
+                                {% endif %}">Individuelle Accidents</a>
+                                <a href="{% url 'produit' numero=4 %}" class="dropdown-item {% if active_produit4 %}
+                                active
+                                {% endif %}">Voyage</a>
                             </div>
                         </div>
-                        <a href="{% url 'produit' numero=products_keys.4 %}" class="nav-item nav-link">Habitation</a>
-                        <a href="{% url 'produit' numero=products_keys.5 %}" class="nav-item nav-link">Transport</a>
-                        <a href="{% url 'produit' numero=products_keys.6 %}" class="nav-item nav-link">Caution</a>
-                        <a href="{% url 'produit' numero=products_keys.7 %}" class="nav-item nav-link">Risques Divers</a>
+                        <a href="{% url 'produit' numero=5 %}" class="nav-item nav-link {% if active_produit5 %}
+                        active
+                        {% endif %}">Habitation</a>
+                        <a href="{% url 'produit' numero=6 %}" class="nav-item nav-link {% if active_produit6 %}
+                        active
+                        {% endif %}">Transport</a>
+                        <a href="{% url 'produit' numero=7 %}" class="nav-item nav-link {% if active_produit7 %}
+                        active
+                        {% endif %}">Caution</a>
+                        <a href="{% url 'produit' numero=8 %}" class="nav-item nav-link {% if active_produit8 %}
+                        active
+                        {% endif %}">Risques Divers</a>
                         {% comment %} <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
@@ -74,9 +95,11 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div> {% endcomment %}
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="{% url 'contact' %}" class="nav-item nav-link {% if active_contact %}
+                        active
+                        {% endif %}">Contact</a>
                     </div>
-                    <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Book Now</a>
+                    <a href="#" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Faire un devis</a>
                 </div>
             </nav>
 
